       to define default language for document generation.
- New: Can reopen a closed supplier invoice.
- New: Move permission "see hidden categories" into "see hidden products/services".
- Fix: Format number was wrong for ar_AR language.
- Fix: Can change password if has only permission change password.
- Fix: Project PDF document show the tasks.
- Fix: bug #29278 : SMTP fails with IP

For developers:
- More comments in code.
- Uniformize some code. 
- First delete of useless pre.inc.php files.
- Fix W3C errors in page forging.
- Qual: Mutualize code of menu managers.


***** ChangeLog for 2.8.1 compared to 2.8 *****
For users:
- Fix: Works on database with _ in name.
- Fix: Broken feature in trips and expense module.
- Fix: Can use $ in database and login/pass values.
- Fix: No error on upgrade if there is orphelins tasks.
- Fix: Failed to login when user agent string was longer than 128.
- Fix: bug #29526 : Numérotation Proposition Incorrecte après duplication


***** ChangeLog for 2.8 compared to 2.7 *****

For users:
- New: Support note on trips module
- New: Can link contacts to projects
- New: Can removed attached file on email form if attachment was wrong.
- New: Add option to show your logo on top of left menu.
- New: task #9935: Can edit accountancy code.
- New: Add an option to make users email required.
- New: Module notification can send email on order or proposal validation.
- New: Can use any command line antivirus on file upload.
- New: A customer can also be a prospect.
- New: task #9802 : Can link an action to a project and use project to 
       filter agenda.
- New: Project can be set on contract creation.
- New: Initial sold can be conciliated on bank module.
- New: Add a default errors-to email for emailing module.
- New: Can filter on user on stock movement list.
- New: When creating a third party from a member, it is set as a new
  customer.
- New: Can use {tttt} in numbering mask setup. It will be replaced
  with third party type.